# ado-pr-mcp

./: .env.example  CLAUDE.MD  LICENSE  README.md  main.py  pyproject.toml
ado_pr_mcp/: __init__.py  azure_client.py  config.py  git_detector.py  models.py  resources.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_azure_client.py  test_git_detector.py
tests/unit/: test_azure_client.py  test_git_detector.py
