[project]
name = "ado-pr-mcp"
version = "0.1.0"
description = "MCP server for Azure DevOps pull requests"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp==2.14.5",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.14.0",
    "respx==0.21.1",
]

[tool.pytest.ini_options]
markers = [
    "unit: Fast unit tests with mocked dependencies",
    "integration: Tests requiring real Azure DevOps API",
    "e2e: End-to-end MCP workflow tests",
    "slow: Tests taking more than 1 second",
]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
